--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Ivy Streams</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
 
@@ -22,7 +22,6 @@
     </div>
     
 </body>
-<!-- <script src="https://download.agora.io/sdk/release/AgoraRTC_N.js"></script> -->
-<script src="AgoraRTC_N-4.7.3.js"></script>
-<script src='main.js'></script>
+<script src="{{ url_for('static', filename='AgoraRTC_N-4.7.3.js') }}"></script>
+<script src="{{ url_for('static', filename='main.js') }}"></script>
 </html>
